# oxc

./: Cargo.toml
crates/oxc_linter/src/rules/eslint/: complexity.rs  max_classes_per_file.rs  max_depth.rs  max_lines.rs  max_lines_per_function.rs  max_nested_callbacks.rs  max_params.rs  max_statements.rs
crates/oxc_linter/src/utils/: schemars.rs
crates/oxc_minifier/src/peephole/: remove_unused_expression.rs
crates/oxc_react_compiler/: Cargo.toml  PLAN.md
crates/oxc_react_compiler/src/: apply_renames.rs  convert_ast_reverse.rs  lib.rs
crates/oxc_semantic/src/: builder.rs
crates/oxc_semantic/src/node/storage/: ancestor_stack.rs  mod.rs
crates/oxc_transformer/src/: lib.rs  react_compiler.rs
crates/oxc_transformer/src/options/: mod.rs
crates/oxc_transformer_plugins/examples/: react_compiler.rs
napi/transform/: index.d.ts
napi/transform/src/: react_compiler.rs  transformer.rs
napi/transform/test/: reactCompiler.test.ts
